--- a/images/docker/Dockerfile
+++ b/images/docker/Dockerfile
@@ -1,5 +1,6 @@
-FROM python:3
+FROM python:3.8
 COPY . /usr/src/app
 WORKDIR /usr/src/app
 RUN pip install -r requirements.txt
-CMD [ "python3" "app.py"]
+ENV FLASK_APP=app.py
+CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
