--- a/services/docker-app/docker-image/Dockerfile
+++ b/services/docker-app/docker-image/Dockerfile
@@ -3,4 +3,4 @@ COPY . /usr/src/app
 WORKDIR /usr/src/app
 RUN pip install -r requirements.txt
 ENV FLASK_APP=app.py
-CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
+ENTRYPOINT ["flask", "run", "--host=0.0.0.0", "--port=5000"]
